# minidriver

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE.BSD  LICENSE.rtf  PinPadUI.cpp  PinPadUI.h  README.md  RELEASE-NOTES.md  RELEASE-NOTES.txt  appveyor.yml  build.bat  build64.bat  build_clean.bat  buildcab.ps1  buildmsi.ps1  cmck_config.xml  esteidcm.cpp  esteidcm.def  esteidcm.def.in  esteidcm.h  esteidcm.inf  esteidcm.props  esteidcm.rc  esteidcm.reg  esteidcm.sln  esteidcm.vcproj  esteidcm.vcxproj  esteidcm2010.sln  esteidcm2013.sln  extra.manifest  install.bat  install.reg  minidriver.wxi  minidriver.wxs  minidriver_registry_cleanup.wxi  notimplemented.cpp  notimplemented.h  nullstream.h  (+17 more)
atrfiltr/: MICROSOFT SMART CARD READER KMDF UPPER FILTER DRIVER SAMPLE CODE_FINAL_05-15-09.rtf  atrfiltr.c  atrfiltr.h  atrfiltr.inf  atrfiltr.rc  atrfiltr.vcxproj  atrfiltr.vcxproj.filters  build_filter.bat  filter-install.reg  install.bat  readme.txt  sources
install/: README.TXT  esteidcm_with_runtimes.inf  esteidcm_x64.inf  install.bat  install_minidriver.reg  regcardmodule.reg  uninstall.bat  uninstall_esteid.reg
